--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-feature
         android:name="android.hardware.telephony"
@@ -11,9 +10,11 @@
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -26,11 +27,11 @@
         android:theme="@style/Theme.Test">
 
         <receiver
-            android:name=".core_component.AlarmReceiver"
+            android:name=".learn.AlarmReceiver"
             android:exported="false" />
 
         <provider
-            android:name="com.ad.test.core_component.AppFileProvider"
+            android:name="com.ad.test.learn.AppFileProvider"
             android:authorities="${applicationId}.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
@@ -40,9 +41,9 @@
         </provider>
 
         <activity
-            android:name=".core_component.PendingIntentAc"
+            android:name=".learn.MediaPlayerAc"
             android:exported="true"
-            android:theme="@style/Theme.Test">
+            android:theme="@style/Theme.AppCompat">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -50,14 +51,12 @@
         </activity>
 
         <activity
-            android:name=".core_component.Main2"
+            android:name=".learn.Main2"
             android:exported="true">
             <intent-filter android:autoVerify="false">
                 <action android:name="android.intent.action.VIEW" />
-
                 <category android:name="android.intent.category.BROWSABLE" />
                 <category android:name="android.intent.category.DEFAULT" />
-
                 <data
                     android:host="www.example.com"
                     android:scheme="https" />
@@ -65,12 +64,11 @@
         </activity>
 
         <activity
-            android:name=".core_component.Main3"
+            android:name=".learn.Main3"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
                 <category android:name="android.intent.category.DEFAULT" />
-
                 <data android:mimeType="text/plain" />
                 <data android:mimeType="*/*" />
             </intent-filter>
@@ -81,5 +79,6 @@
                 <data android:scheme="mailto" />
             </intent-filter>
         </activity>
+        <activity android:name=".learn.SecondActivity" />
     </application>
 </manifest>
