feat: Implement RecyclerView and Picasso examples
This commit introduces `RecyclerView` for displaying a list of transactions and `Picasso` for image loading and transformation. It also includes build configuration updates to support these features.

- **RecyclerView Implementation:**
  - Adds a new activity (`RecyclerViewAc`) to demonstrate `RecyclerView` within a Jetpack Compose layout using `AndroidView`.
  - Implements a `TransactionsAdapter` using `ListAdapter` and `DiffUtil` for efficient list updates.
  - Includes a `ViewHolder` (`TransactionViewHolder`) and an item layout (`item_transaction.xml`).
  - Demonstrates adding a custom `DividerItemDecoration` with a drawable (`divider.xml`).
  - Adds functionality to smooth-scroll to a specific position in the list.

- **Picasso Image Loading:**
  - Adds a new activity (`PicassoAc`) to demonstrate loading an image from a URL into an `ImageView`.
  - Implements image transformation using the `picasso-transformations` library (e.g., `BlurTransformation`).
  - Adds a new layout file (`picasso_view.xml`) for the example.

- **Build & Dependency Updates:**
  - Adds dependencies for `recyclerview`, `constraintlayout`, `picasso`, and `picasso-transformations`.
  - Integrates the Foojay Toolchains Convention Plugin (`org.gradle.toolchains.foojay-resolver-convention`) to manage the Gradle daemon's JVM.
  - Adds a `gradle-daemon-jvm.properties` file specifying toolchain URLs for JDK 21 from JetBrains.

- **Android Manifest & Resources:**
  - Sets `RecyclerViewAc` as the new launcher activity.
  - Adds a vector drawable (`outline_wand_stars_24.xml`) used as an icon.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,9 +41,9 @@
         </provider>
 
         <activity
-            android:name=".learn.MediaPlayerAc"
+            android:name=".learn.RecyclerViewAc"
             android:exported="true"
-            android:theme="@style/Theme.AppCompat">
+            android:theme="@style/Theme.AppCompat.DayNight">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
